Implementação do SASS CSS

--- a/estilos.css
+++ b/estilos.css
@@ -1,53 +1,35 @@
 html {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
 }
 
 header {
-    background-color: cornflowerblue;
-    color:white;
+  background-color: cornflowerblue;
+  color: white;
 }
 
 .header__titulo {
-    text-align: center;
-    font-size: 2em;
+  text-align: center;
+  font-size: 2em;
 }
 
 .header__nav {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 5px;
-}
-
-.header__link {
-    text-decoration: underline;
-}
-
-.header__link:hover {
-    cursor: pointer;
-    color:lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5px;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-.main__div {
-    margin: 5px;
-    border: 1px;
-    border-style: solid;
-    border-color: cornflowerblue;
-    padding: 5px;
-    text-align: left;
-    width: 75%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
@@ -55,19 +37,35 @@ main {
     width: stretch;
   }
 }
+.header__link {
+  text-decoration: underline;
+}
+.header__link:hover {
+  cursor: pointer;
+  color: lightblue;
+}
+
+.main__div {
+  margin: 5px;
+  border: 1px solid cornflowerblue;
+  padding: 5px;
+  text-align: left;
+  width: 75%;
+}
 
 .main__div-titulo {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .main__form-mensagem {
-    height: 2.5em;
-    min-height: 200px;
-    width: 99.5%;
-
+  height: 2.5em;
+  min-height: 200px;
+  width: 99.5%;
 }
 
 .main__button-enviar {
-    padding: 5px;
-    margin-top: 2px;
+  padding: 5px;
+  margin-top: 2px;
 }
+
+/*# sourceMappingURL=estilos.css.map */
